# ft_engine

./: .gitignore  README.en.md  README.md  config.gni  install_header_files.txt  runFT.sh  runFT_wayland.sh
display_server/: .clang-format  BUILD.gn  OAT.xml  README.md  bundle.json  default.scss  flutter.gni  graphic.cfg  graphic_config.gni  hisysevent.yaml
display_server/drivers/hal/: BUILD.gn
display_server/drivers/interfaces/: display_device.h  display_gralloc.h  display_layer.h  display_type.h
display_server/etc/: BUILD.gn  graphic.para.dac
display_server/frameworks/bootanimation/: BUILD.gn
display_server/frameworks/fence/: BUILD.gn
display_server/frameworks/opengl_wrapper/: BUILD.gn
display_server/frameworks/surface/: BUILD.gn  bundle.json
display_server/frameworks/surfaceimage/: BUILD.gn
display_server/frameworks/vulkan_wrapper/: BUILD.gn
display_server/ft_build/: BUILD.gn  ds_config.gni
display_server/ft_configs/: ds_config.gni
display_server/rosen/test/: README.md
display_server/rosen/tools/: gn_project_to_cmake.py
display_server/utils/: BUILD.gn
display_server/utils/buffer_handle/: BUILD.gn
display_server/utils/color_manager/: BUILD.gn
display_server/utils/ft_build/: BUILD.gn
display_server/utils/lex_yacc/: gen_flexlexer_header.py  gen_lex_cpp.py  gen_yacc_cpp.py  lex_yacc.gni
display_server/utils/log/: rs_trace.h
display_server/utils/matrix/: BUILD.gn
display_server/utils/promise/: BUILD.gn
display_server/utils/sandbox/: BUILD.gn  sandbox_utils.cpp  sandbox_utils.h
display_server/utils/scoped_bytrace/: BUILD.gn
display_server/utils/socketpair/: BUILD.gn
display_server/utils/sync_fence/: BUILD.gn
display_server/utils/test_header/: BUILD.gn
display_server/utils/wmlayout/: gen_scss.py  wmlayout.gni
samples/: BUILD.gn  clock.cpp  desktop.cpp  simInput.cpp  snapshot.cpp
wayland_adapter/: BUILD.gn  wayland_adapter_hilog.h  wayland_server.cpp  wayland_server.h
wayland_adapter/framework/: BUILD.gn
wayland_adapter/framework/core/: wayland_compositor.cpp  wayland_compositor.h  wayland_data_device.cpp  wayland_data_device.h  wayland_data_device_manager.cpp  wayland_data_device_manager.h  wayland_data_offer.cpp  wayland_data_offer.h  wayland_data_source.cpp  wayland_data_source.h  wayland_keyboard.cpp  wayland_keyboard.h  wayland_output.cpp  wayland_output.h  wayland_pointer.cpp  wayland_pointer.h  wayland_region.cpp  wayland_region.h  wayland_seat.cpp  wayland_seat.h  wayland_subcompositor.cpp  wayland_subcompositor.h  wayland_subsurface.cpp  wayland_subsurface.h  wayland_surface.cpp  wayland_surface.h
wayland_adapter/framework/stable/: wayland_xdg_popup.cpp  wayland_xdg_popup.h  wayland_xdg_positioner.cpp  wayland_xdg_positioner.h  wayland_xdg_surface.cpp  wayland_xdg_surface.h  wayland_xdg_toplevel.cpp  wayland_xdg_toplevel.h  wayland_xdg_wm_base.cpp  wayland_xdg_wm_base.h
wayland_adapter/framework/unstable/: wayland_zxdg_output_manager_v1.cpp  wayland_zxdg_output_manager_v1.h  wayland_zxdg_output_v1.cpp  wayland_zxdg_output_v1.h
wayland_adapter/test/: BUILD.gn  wayland_demo.cpp
wayland_adapter/utils/: BUILD.gn
wayland_adapter/utils/include/: version.h  wayalnd_utils.h  wayland_event_loop.h  wayland_global.h  wayland_keycode_trans.h  wayland_objects_pool.h  wayland_resource_object.h  wayland_singleton.h  xdg_surface_utils.h
wayland_adapter/utils/src/: wayland_event_loop.cpp  wayland_global.cpp  wayland_keycode_trans.cpp  wayland_objects_pool.cpp  wayland_resource_object.cpp
wayland_adapter/wayland-protocols/: BUILD.gn
wayland_adapter/wayland_protocols/: BUILD.gn
wayland_adapter/wayland_protocols/unstable/: xdg-output-unstable-v1-client-protocol.h  xdg-output-unstable-v1-protocol.c  xdg-output-unstable-v1-server-protocol.h
window_manager/: OAT.xml  README.md  bundle.json  hisysevent.yaml  windowmanager_aafwk.gni
window_manager/dm/: BUILD.gn
window_manager/dm/ft_build/: BUILD.gn
window_manager/dm/include/: display_manager_adapter.h  display_manager_agent_default.h
window_manager/dm/src/: display.cpp  display_manager.cpp  display_manager_adapter.cpp  screen.cpp  screen_group.cpp  screen_manager.cpp
window_manager/dmserver/: BUILD.gn
window_manager/dmserver/ft_build/: BUILD.gn
window_manager/dmserver/include/: abstract_display.h  abstract_display_controller.h  abstract_screen.h  abstract_screen_controller.h  display_cutout_controller.h  display_dumper.h  display_manager_agent_controller.h  display_manager_config.h  display_manager_interface.h  display_manager_proxy.h  display_manager_service.h  display_manager_service_inner.h  display_manager_stub.h  display_power_controller.h  screen_rotation_controller.h  sensor_connector.h
window_manager/dmserver/src/: abstract_display.cpp  abstract_display_controller.cpp  abstract_screen.cpp  abstract_screen_controller.cpp  display_cutout_controller.cpp  (+10 more)
window_manager/etc/: BUILD.gn  wms.para  wms.para.dac
window_manager/ft_adapter/: ability_context.h  ability_info.h  ability_manager_client.h  accesstoken_kit.h  bundle_constants.h  bundle_mgr_interface.h  bundle_mgr_proxy.h  common_event_data.h  common_event_manager.h  common_event_subscribe_info.h  common_event_subscriber.h  common_event_support.h  config_policy_utils.h  display_power_mgr_client.h  hisysevent.h  matching_skills.h  parameters.h  power_mgr_client.h  rs_iwindow_animation_controller.h  rs_iwindow_animation_finished_callback.h  running_lock.h  sensor_agent.h  snapshot.h  socperf_client.h  ui_content.h  want.h  window_info.h  window_manager_service_handler_stub.h
window_manager/ft_pointer_draw/: BUILD.gn  ft_pointer_draw_manager_adapter.cpp  i_pointer_drawing_manager.h  pointer_draw_manager.cpp  pointer_draw_manager.h
window_manager/pointer_draw/: pointer_draw.cpp  pointer_draw.h
window_manager/previewer/: BUILD.gn
window_manager/resources/: BUILD.gn
window_manager/sa_profile/: 4606.xml  4607.xml  BUILD.gn
window_manager/snapshot/: BUILD.gn
window_manager/test/: BUILD.gn
window_manager/utils/: BUILD.gn
window_manager/wm/: BUILD.gn
window_manager/wmserver/: BUILD.gn
(+2359 files in other folders)
