# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/graphic_2d/utils/wmlayout/wmlayout.gni")
import("graphic_config.gni")

group("default") {
  public_deps = [ ":graphic.rc" ]

  if (graphic_standard_feature_bootanimation_enable) {
    public_deps += [ "frameworks/bootanimation:bootanimation" ]
    public_deps += [ "frameworks/bootanimation:bootanimation_pics" ]
    public_deps += [ "frameworks/bootanimation:bootanimation_sounds" ]
  }
}

group("graphic_2d_test") {
  testonly = true

  public_deps = [
    "frameworks/opengl_wrapper/test:test",
    "frameworks/surface/test:test",
    "frameworks/vulkan_wrapper/test:test",
    "rosen/modules/composer:test",
    "rosen/modules/effect/test/unittest:test",
    "rosen/test/frame_analyzer:test",
    "rosen/test/render_service:test",
    "utils/color_manager:test",
    "utils/socketpair:test",
    "utils/sync_fence:test",
  ]
}

## Install graphic.rc to /system/etc/init/graphic.rc {{{
ohos_prebuilt_etc("graphic.rc") {
  source = "graphic.cfg"
  relative_install_dir = "init"
  part_name = "graphic_standard"
  subsystem_name = "graphic"
}

## Install graphic.rc to /system/etc/init/graphic.rc }}}

group("libsurface") {
  public_deps = [ "frameworks/surface:surface" ]
}

group("libfence") {
  public_deps = [ "frameworks/fence:libfence" ]
}

group("libgl") {
  public_deps = libgl
}

group("libnative_image") {
  public_deps = [ "frameworks/surfaceimage:libnative_image" ]
}
