# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ace_flutter_gn_root =
    "//foundation/arkui/ace_engine/build/external_config/flutter"
rosen_flutter_gn_root = "//foundation/graphic/graphic_2d/rosen/build/flutter"

ace_root = "//foundation/arkui/ace_engine"
ace_flutter_engine_root = "$ace_root/build/external_config/flutter"
flutter_root = "//third_party/flutter"
