# Copyright (c) 2023 Huawei Technologies Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/gn/fangtian.gni")
import("//config.gni")
import("//display_server/ft_build/ds_config.gni")

ft_executable("clock") {
  sources = [ "clock.cpp" ]

  cflags = [ "-Wno-c++11-narrowing" ]
  if (ds_enable_gpu) {
    defines = [ "ENABLE_GPU" ]
    libs = [ "EGL", "GLESv2" ]
  }

  include_dirs = [
    "$window_manager_path/interfaces/innerkits",
    "$display_server_root/rosen/modules/2d_graphics/src",
  ]

  deps = [
    "$display_server_root/rosen/modules/render_service_base/ft_build:librender_service_base",
    "$display_server_root/rosen/modules/render_service_client/ft_build:librender_service_client",
    "$display_server_root/rosen/modules/animation/window_animation/ft_build:window_animation",
    "$display_server_root/utils/buffer_handle/ft_build:buffer_handle",
    "$window_manager_path/wm/ft_build:libwm",
    "$window_manager_path/utils/ft_build:libwmutil",
    "$window_manager_path/wmserver/ft_build:libwms",
    "$window_manager_path/dmserver/ft_build:libdms",
    "$window_manager_path/dm/ft_build:libdm",
    "//build/gn/configs/system_libs:skia",
    "//build/gn/configs/system_libs:c_utils",
    "//build/gn/configs/system_libs:ipc_core",
  ]
}
