# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ability_runtime_path = "//foundation/ability/ability_runtime"
ability_runtime_inner_api_path = "${ability_runtime_path}/interfaces/inner_api"
ability_runtime_kits_path = "${ability_runtime_path}/frameworks/kits"
ability_runtime_services_path = "${ability_runtime_path}/services"
ability_runtime_napi_path = "${ability_runtime_path}/frameworks/js/napi"

declare_args() {
  efficiency_manager_enable = true
  window_manager_feature_subscribe_motion = false

  if (defined(global_parts_info) &&
      !defined(global_parts_info.resourceschedule_efficiency_manager)) {
    efficiency_manager_enable = false
  }
}

print(
    "window_manager_feature_subscribe_motion = ${window_manager_feature_subscribe_motion}")
