# Copyright (c) 2021-2022 Huawei Technologies Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
    feature_enable_gpu = false
}
if (feature_enable_gpu) {
    enable_gpu = true
    rs_enable_eglimage = true
    gpu_defines = [
      "ACE_ENABLE_GL",
      "RS_ENABLE_GL",
      "RS_ENABLE_EGLIMAGE",
      "RS_ENABLE_EGLQUERYSURFACE",
    ]
} else {
    enable_gpu = false
    rs_enable_eglimage = false
    gpu_defines = []
}

display_server_root = "//display_server"
rosen_root = "//display_server/rosen"
