# Copyright (c) 2023 Huawei Technologies Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/gn/fangtian.gni")
import("//config.gni")

config("wayland_framework_public_config") {
  include_dirs = [
    "core",
    "stable",
  ]
}

ft_source_set("wayland_framewok_sources") {
  sources = [
    "core/wayland_compositor.cpp",
    "core/wayland_surface.cpp",
  ]

  sources += [
    "stable/wayland_xdg_surface.cpp",
    "stable/wayland_xdg_toplevel.cpp",
    "stable/wayland_xdg_wm_base.cpp",
  ]

  public_configs = [ ":wayland_framework_public_config" ]

  deps = [
    "//build/gn/configs/system_libs:hilog",
    "//display_server/drivers/hal/base:ft_event_loop",
    "//wayland_adapter/utils:wayland_adapter_utils_sources",
    "//wayland_adapter/wayland_protocols:wayland_protocols_sources",
  ]
}
