# Copyright (c) 2023 Huawei Technologies Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/gn/fangtian.gni")
import("//config.gni")
import("//display_server/ft_build/ds_config.gni")

config("wayland_framework_public_config") {
  include_dirs = [
    "core",
    "stable",
    "unstable",
  ]
}

ft_source_set("wayland_framewok_sources") {
  sources = [
    "core/wayland_compositor.cpp",
    "core/wayland_seat.cpp",
    "core/wayland_surface.cpp",
    "core/wayland_region.cpp",
    "core/wayland_pointer.cpp",
    "core/wayland_keyboard.cpp",
    "core/wayland_output.cpp",
    "core/wayland_subcompositor.cpp",
    "core/wayland_subsurface.cpp",
  ]

  sources += [
    "stable/wayland_xdg_surface.cpp",
    "stable/wayland_xdg_toplevel.cpp",
    "stable/wayland_xdg_wm_base.cpp",
  ]

  sources += [
    "unstable/wayland_zxdg_output_manager_v1.cpp",
    "unstable/wayland_zxdg_output_v1.cpp",
  ]

  public_configs = [ ":wayland_framework_public_config" ]

  if (ds_enable_gpu) {
    defines = [ "ENABLE_GPU" ]
  }

  deps = [
    "$window_manager_path/dm/ft_build:libdm",
    "$window_manager_path/wm/ft_build:libwm",
    "$display_server_root/rosen/modules/render_service_base/ft_build:librender_service_base",
    "$display_server_root/rosen/modules/render_service_client/ft_build:librender_service_client",
    "//build/gn/configs/system_libs:hilog",
    "//build/gn/configs/system_libs:image",
    "//display_server/drivers/hal/base:ft_event_loop",
    "//wayland_adapter/utils:wayland_adapter_utils_sources",
    "//wayland_adapter/wayland_protocols:wayland_protocols_sources",
  ]
}
