# Copyright (c) 2023 Huawei Technologies Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/gn/fangtian.gni")
import("//config.gni")

ft_executable("wayland_demo") {
  sources = [ "wayland_demo.cpp" ]

  include_dirs = [ "." ]

  libs = [ "wayland-client" ]

  deps = [
    "//build/gn/configs/system_libs:skia",
    "//display_server/drivers/hal/base:ft_event_loop",
    "//wayland_adapter/wayland_protocols:wayland_protocols_sources",
  ]
}
