# Copyright (c) 2023 Huawei Technologies Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/gn/fangtian.gni")
import("//config.gni")

config("wayland_utils_public_config") {
  include_dirs = [ "include" ]
}

ft_source_set("wayland_adapter_utils_sources") {
  sources = [
    "src/wayland_global.cpp",
    "src/wayland_objects_pool.cpp",
    "src/wayland_resource_object.cpp",
    "src/wayland_keycode_trans.cpp",
    "src/wayland_event_loop.cpp",
  ]

  public_configs = [ ":wayland_utils_public_config" ]

  deps = [
    "//build/gn/configs/system_libs:mmi",
    "//build/gn/configs/system_libs:hilog",
    "//display_server/drivers/hal/base:ft_event_loop",
  ]
}
