# Copyright (c) 2023 Huawei Technologies Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/gn/fangtian.gni")
import("//config.gni")

config("wayland_public_config") {
  include_dirs = [ "stable/xdg-shell" ]
  include_dirs += [ "unstable" ]
}

ft_source_set("wayland_protocols_sources") {
  sources = [ "stable/xdg-shell/xdg-shell-protocol.c" ]
  sources += [ "unstable/xdg-output-unstable-v1-protocol.c" ]
  public_configs = [ ":wayland_public_config" ]
}
