# Copyright (c) 2023 Huawei Technologies Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/gn/fangtian.gni")
import("//config.gni")

config("pointer_draw_config") {
  visibility = [ ":*" ]

  cflags = [
    "-Wno-c++11-narrowing",
  ]

  include_dirs = [
    "$window_manager_path/interfaces/innerkits/dm",
  ]
}

ft_shared_library("libpointerdraw") {
  sources = [
    "pointer_draw_manager.cpp",
    "ft_pointer_draw_manager_adapter.cpp",
  ]

  configs = [
    ":pointer_draw_config",
  ]

  deps = [
    "$display_server_root/rosen/modules/render_service_base/ft_build:librender_service_base",
    "$display_server_root/rosen/modules/render_service_client/ft_build:librender_service_client",
    "$window_manager_path/dmserver/ft_build:libdms",
    "//build/gn/configs/system_libs:eventhandler",
    "//build/gn/configs/system_libs:image",
    "//build/gn/configs/system_libs:safwk",
    "//build/gn/configs/system_libs:skia",
  ]
}
